--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     
     <title>Ayesha's Porfolio</title>
   </head>
-  <body class="scrollbar-thin scrollbar-thumb-rose-500" style="overflow-x: hidden;" >
+  <body style="overflow-x: hidden;" >
     <div id="root"></div>
 
   </body>
