--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
-    <title>Ayesha's Porfolio</title>
-  </head>
-  <body style="overflow-x: hidden;" >
-    <div id="root"></div>
+<style>
+  .scroll-container {
+    height: 300px;
+    overflow-y: scroll;
+    border-radius: 10px;
+  }
 
-  </body>
+  .scroll-container::-webkit-scrollbar {
+    width: 12px;
+    border-radius: 10px;
+  }
+
+  .scroll-container::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background: #212121;
+  }
+
+  .scroll-container::-webkit-scrollbar-thumb {
+    background: linear-gradient(180deg, #03A9F4 27.76%, #FFC107 64.6%, #F44336 99.95%);
+    border-radius: 10px;
+
+  }
+
+  .scroll-container::-webkit-scrollbar-thumb:hover {
+    background: #F44336;
+    border-radius: 10px;
+  }
+
+  .scroll-container::-webkit-scrollbar-button {
+    display: none;
+  }
+</style>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <title>Ayesha's Porfolio</title>
+</head>
+
+<body class="scroll-container" style="overflow-x: hidden;">
+  <div id="root"></div>
+
+</body>
+
 </html>
